# dtms

./: .gitignore  LICENSE  README.md  dev-requirements.txt  dtms.db  mappings.py  missing.out  pylintrc  pyproject.toml  requirements.txt  session_manage.py  setup.py
dtms/: crud.py  database.py  dtms.py  main.py  mappings.py  models.py  prereq_parser.py  schemas.py  session_manage.py
dtms/db_management/: course_catalogue_backfill.py  dtms_backfill.py
