[tool.poetry]
name = "dtms"
version = "0.1.0"
description = "Scraper API thing for Drexel TMS"
authors = ["Shahriyar Shawon <ShahriyarShawon321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
