[tool.poetry]
name = "dtms"
version = "0.1.0"
description = "Scraper API thing for Drexel TMS"
authors = ["Shahriyar Shawon <ShahriyarShawon321@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
yarl = "^1.8.2"
attrs = "^22.2.0"
requests = "^2.28.2"
click = "^8.1.3"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
